Added ability to save in memory fixed to AppSettings. No data loss with crashes and restart